--- a/movies/resources/css/app.css
+++ b/movies/resources/css/app.css
@@ -1,7 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-/* Please note this document will be updated as time goes by. Thank you */
+
+
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
@@ -22,7 +20,7 @@
     input[type="search"],
     input[type="tel"],
     input[type="url"], textarea {
-        @apply block w-full rounded-md border-0 p-2 text-slate-900 shadow-sm ring-1 ring-inset ring-slate-300 placeholder:text-slate-500 focus:ring-2 focus:ring-inset focus:ring-blue-500 sm:text-sm bg-white;
+        @apply block w-full rounded-md border-0 p-2 text-slate-900 shadow-sm ring-1 ring-inset ring-slate-300 placeholder:text-slate-500 focus:ring-2 focus:ring-inset  sm:text-sm bg-white ;
     }
     label {
         @apply block text-sm font-medium leading-6 text-slate-900 first-letter:capitalize;
@@ -44,13 +42,13 @@
         @apply font-semibold text-purple-300 hover:text-purple-300;
     }
     .nav-link {
-        @apply text-slate-200 hover:bg-purple-300 hover:text-white rounded-md px-3 py-2 text-sm font-medium;
+        @apply text-slate-200 hover:bg-purple-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium;
     }
     .title {
         @apply my-6 text-center text-3xl font-bold leading-9 text-slate-900;
     }
     .error {
-        @apply text-xs text-red-500 mt-1;
+        @apply text-sm text-red-600 mt-1;
     }
     table {
         @apply w-full text-sm text-left rounded-md shadow-lg overflow-hidden mb-6 table-auto bg-white;
@@ -72,5 +70,8 @@
     }
     .round-btn {
         @apply w-8 h-8 overflow-auto rounded-full bg-slate-100 focus:outline-none focus:ring-1 focus:ring-slate-100 focus:ring-offset-2 focus:ring-offset-slate-800;
+    }
+    .btn{
+        @apply bg-purple-900 block w-full rounded-md border-0 p-2;  
     }
 }
