--- a/movies/resources/css/app.css
+++ b/movies/resources/css/app.css
@@ -32,5 +32,10 @@
     }
     .username {
         @apply py-2 pl-4 border-b border-slate-200 text-xs text-slate-700;
+    
+    }
+    .profile{
+        
+        @apply w-10 h-10 overflow-auto rounded-full ne-none focus:ring-1 focus:ring-slate-100 focus:ring-offset-2 focus:ring-offset-slate-800;
     }
 }
