--- a/movies/resources/css/app.css
+++ b/movies/resources/css/app.css
@@ -6,11 +6,15 @@
     nav {
         @apply p-4 max-w-screen-lg mx-auto flex items-center justify-between;
     }
+    header {
+        @apply bg-slate-800 shadow-md;
+        background-color: rgb(84, 56, 113);
+    }
     .round-btn {
         @apply w-8 h-8 overflow-auto rounded-full bg-slate-100 focus:outline-none focus:ring-1 focus:ring-slate-100 focus:ring-offset-2 focus:ring-offset-slate-800;
     }
     .nav-link {
-        @apply active:bg-slate-900 hover:bg-slate-100/10 text-slate-100 px-3 py-1 rounded-lg;
+        @apply active:bg-purple-700 hover:bg-slate-100/10 text-slate-100 px-3 py-1 rounded-lg;
     }
     .title {
         @apply text-3xl mb-4 font-bold;
@@ -36,6 +40,7 @@
     }
     .profile{
         
-        @apply w-10 h-10 overflow-auto rounded-full ne-none focus:ring-1 focus:ring-slate-100 focus:ring-offset-2 focus:ring-offset-slate-800;
+        @apply w-10 h-10 overflow-auto rounded-full focus:ring-1 focus:ring-slate-100 focus:ring-offset-2 focus:ring-offset-slate-800;
+
     }
 }
