--- a/movies/resources/css/app.css
+++ b/movies/resources/css/app.css
@@ -7,8 +7,8 @@
         @apply p-4 max-w-screen-lg mx-auto flex items-center justify-between;
     }
     header {
-        @apply bg-slate-800 shadow-md;
-        background-color: rgb(84, 56, 113);
+        @apply bg-purple-900 shadow-md min-h-[100px];
+        
     }
     .round-btn {
         @apply w-8 h-8 overflow-auto rounded-full bg-slate-100 focus:outline-none focus:ring-1 focus:ring-slate-100 focus:ring-offset-2 focus:ring-offset-slate-800;
@@ -17,7 +17,13 @@
         @apply active:bg-purple-700 hover:bg-slate-100/10 text-slate-100 px-3 py-1 rounded-lg;
     }
     .title {
+        @apply text-3xl mb-4 font-bold text-center;
+    }
+    .sub{
         @apply text-3xl mb-4 font-bold;
+    }
+    .subtitle{
+        @apply font-semibold text-center;
     }
     .btn {
         @apply relative enabled:bg-slate-800 enabled:active:bg-slate-900 enabled:hover:bg-slate-700 p-2 rounded-md text-white block w-full disabled:bg-slate-500 disabled:cursor-wait;
